--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://semicolonnetwork1:SemiColon2754@semicolonnetwork.5rcctsk.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://semicolonnetwork1:Semicolon2754@semicolonnetwork.5rcctsk.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=SemiColonNetwork
