--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.data.mongodb.uri=mongodb+srv://semicolonnetwork1:Semicolon2754@semicolonnetwork.5rcctsk.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=SemiColonNetwork
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.protocol=smtp
+spring.mail.username=tolulope.alawode@gmail.com
+spring.mail.password=qytjlxdpatfkyfhc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.default-encoding=UTF-8
+logging.level.org.springframework.mail=DEBUG
