--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
