--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.data.mongodb.database=SemiColonNetwork
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.protocol=smtp
-spring.mail.username=tolulope.alawode@gmail.com
-spring.mail.password=qytjlxdpatfkyfhc
+spring.mail.username=semicolonnetwork1@gmail.com
+spring.mail.password=vohgrdegksjgsjtn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
